--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +29,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ssowens.android.popularmovies.MainActivity"/>
         </activity>
-        <activity android:name=".MovieDetailActivity">
+        <activity android:name=".MovieDetailActivity"
+                  android:label="@string/title_activity_detail">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ssowens.android.popularmovies.MainActivity"/>
         </activity>
     </application>
 
