--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:preference-v7:23.4.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.android.support:support-annotations:27.0.2'
 }
 
 repositories {
