--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:support-annotations:27.0.2'
+    compile 'com.github.ivbaranov:materialfavoritebutton:0.1.4'
+    compile 'com.android.support:design:26.1.0'
 }
 
 repositories {
