Added schema and insert for favorite movies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
     dataBinding.enabled = true;
 }
 
+apply plugin: 'com.android.application'
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
