--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             android:label="@string/app_name"
             android:supportsRtl="true"
             <intent-filter>
@@ -21,20 +21,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:label="@string/title_settings_activity"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".activity.MainActivity"
             android:theme="@style/SettingsTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.ssowens.android.popularmovies.MainActivity"/>
+                android:value="com.ssowens.android.popularmovies.activity.MainActivity"/>
         </activity>
-        <activity android:name=".MovieDetailActivity"
-                  android:label="@string/title_activity_detail">
+        <activity
+            android:name=".activity.MovieDetailActivity"
+            android:label="@string/title_activity_detail">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.ssowens.android.popularmovies.MainActivity"/>
+                android:value="com.ssowens.android.popularmovies.activity.MainActivity"/>
         </activity>
+        <!-- Register the MovieContentProvider -->
+        <!-- Set name, authorities, nad exported attributes -->
+        <!-- exported = false limits access to this ContentProvider to only this app -->
+        <provider
+            android:name="com.ssowens.android.popularmovies.data.MovieContentProvider"
+            android:authorities="com.ssowens.android.popularmovies"
+            android:exported="false"/>
     </application>
 
 </manifest>
